--- a/project/client/.settings/org.eclipse.core.resources.prefs
+++ b/project/client/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,7 @@
 eclipse.preferences.version=1
 encoding//checkpoint/LS0110000001.py=utf-8
+encoding//checkpoint/LS0110000002.py=utf-8
+encoding//checkpoint/LS0110000003.py=utf-8
+encoding//checkpoint/LS0110000004.py=utf-8
+encoding//utils/KeyValueConfigParser.py=utf-8
 encoding/<project>=UTF-8
