add check-point W12200000001

--- a/project/client/.settings/org.eclipse.core.resources.prefs
+++ b/project/client/.settings/org.eclipse.core.resources.prefs
@@ -5,5 +5,6 @@ encoding//checkpoint/LS0110000003.py=utf-8
 encoding//checkpoint/LS0110000004.py=utf-8
 encoding//checkpoint/LS0110000005.py=utf-8
 encoding//checkpoint/LS0110000006.py=utf-8
+encoding//checkpoint/W12200000001.py=utf-8
 encoding//utils/KeyValueConfigParser.py=utf-8
 encoding/<project>=UTF-8
